force-app/main/default/objects/Candidate_Test__c/Candidate_Test__c.object-meta.xml
<CustomObject>
    <label>Candidate Test</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>