force-app/main/default/objects/Candidate_Test__c/fields/Json_Result__c.field-meta.xml
<CustomField>
    <fullName>Json_Result__c</fullName>
    <label>Json Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>