force-app/main/default/objects/Candidate_Test__c/fields/percentage__c.field-meta.xml
<CustomField>
    <fullName>percentage__c</fullName>
    <formula>IF( !(ISNULL( Score__c ) ) &amp;&amp; !(ISNULL( Total_Marks__c )) ,
 
          Score__c / Total_Marks__c ,
         null)</formula>
    <label>percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>