force-app/main/default/objects/Candidate_Test__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF( !(ISNULL( Score__c ) ) &amp;&amp; !(ISNULL( Total_Marks__c )),
    IF( (Score__c / Total_Marks__c)*100 &gt;= 60, &quot;Pass&quot;, &quot;Fail&quot;)
, null)</formula>
    <label>Result</label>
    <type>Text</type>
</CustomField>