force-app/main/default/objects/Candidate_Test__c/fields/Test_Set__c.field-meta.xml
<CustomField>
    <fullName>Test_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Set</label>
    <referenceTo>Test_Set__c</referenceTo>
    <relationshipLabel>Candidate Tests</relationshipLabel>
    <relationshipName>Candidate_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>