force-app/main/default/objects/Candidate_Test__c/listViews/Above_90.listView-meta.xml
<ListView>
    <fullName>Above_90</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Score__c</field>
        <operation>greaterThan</operation>
        <value>26</value>
    </filters>
    <label>Above_27</label>
</ListView>