force-app/main/default/objects/Candidate_Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Result__c</columns>
    <columns>Score__c</columns>
    <columns>Total_Marks__c</columns>
    <columns>percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/10/2023 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>